--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <th>E-mail</th>
                     <th>Celular</th>
                     <th>Cidade</th>
+                    <th>Cep</th>
                     <th>Ação</th>
                 </tr>
             </thead>
@@ -73,6 +74,7 @@
                     <input type="email" id="email" class="modal-field" placeholder="e-mail do Cliente" required>
                     <input type="text"  id="celular" class="modal-field" placeholder="Celular do Cliente" required>
                     <input type="text" id="cidade" class="modal-field" placeholder="Cidade do Cliente" required>
+                    <input type="text" id="cep" class="modal-field" placeholder="Cep do Cliente" required>
                 </form>
                 <footer class="modal-footer">
                     <button id="salvar" class="button green">Salvar</button>
