--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,36 +31,6 @@
                 </tr>
             </thead>
             <tbody>
-                <!--<tr>
-                    <td>Maria</td>
-                    <td>maria@gmail.com</td>
-                    <td>(11) 97165-1111</td>
-                    <td>Anapolis</td>
-                    <td>
-                        <button type="button" class="button green">editar</button>
-                        <button type="button" class="button red">excluir</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>João Pedro</td>
-                    <td>joao@gmail.com</td>
-                    <td>(11) 97165-2222</td>
-                    <td>Jandira</td>
-                    <td>
-                        <button type="button" class="button green">editar</button>
-                        <button type="button" class="button red">excluir</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Jose da Silva</td>
-                    <td>jose@gmail.com</td>
-                    <td>(11) 97165-3333</td>
-                    <td>São Roque</td>
-                    <td>
-                        <button type="button" class="button green">editar</button>
-                        <button type="button" class="button red">excluir</button>
-                    </td>
-                </tr>-->
             </tbody>
         </table>
         <div class="modal" id="modal">
@@ -70,11 +40,11 @@
                     <span class="modal-close" id="modalClose">&#10006;</span>
                 </header>
                 <form id="form" class="modal-form">
-                    <input type="text" id="nome" class="modal-field" placeholder="Nome do Cliente" required>
-                    <input type="email" id="email" class="modal-field" placeholder="e-mail do Cliente" required>
-                    <input type="text"  id="celular" class="modal-field" placeholder="Celular do Cliente" required>
-                    <input type="text" id="cidade" class="modal-field" placeholder="Cidade do Cliente" required>
-                    <input type="text" id="cep" class="modal-field" placeholder="Cep do Cliente" required>
+                    <input type="text" id="nome" class="modal-field" placeholder="Nome do Cliente" maxlenght="25" required>
+                    <input type="email" id="email" class="modal-field" placeholder="e-mail do Cliente" maxlenght="15" required>
+                    <input type="text"  id="celular" class="modal-field" placeholder="Celular do Cliente" maxlength="10" required>
+                    <input type="text" id="cidade" class="modal-field" placeholder="Cidade do Cliente" maxlenght="15" required>
+                    <input type="cep" id="cep" class="modal-field" placeholder="Cep do Cliente" maxlength="10" required>
                 </form>
                 <footer class="modal-footer">
                     <button id="salvar" class="button green">Salvar</button>
