--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </form>
                 <footer class="modal-footer">
                     <button id="salvar" class="button green">Salvar</button>
-                    <button id="cancelar" class="button blue">Cancelar</button>
+                    <button id="cancelar" class="button blue">Criar Banco</button>
                 </footer>
             </div>
         </div>
