--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 <form id="form" class="modal-form">
                     <input type="text" id="nome" class="modal-field" placeholder="Nome do Cliente" maxlenght="25" required>
                     <input type="email" id="email" class="modal-field" placeholder="e-mail do Cliente" maxlenght="15" required>
-                    <input type="text"  id="celular" class="modal-field" placeholder="Celular do Cliente" maxlength="10" required>
+                    <input type="number"  id="celular" class="modal-field" placeholder="Celular do Cliente" maxlength="15" required>
                     <input type="text" id="cidade" class="modal-field" placeholder="Cidade do Cliente" maxlenght="15" required>
-                    <input type="cep" id="cep" class="modal-field" placeholder="Cep do Cliente" maxlength="10" required>
+                    <input type="number" id="cep" class="modal-field" placeholder="Cep do Cliente" maxlength="10" required>
                 </form>
                 <footer class="modal-footer">
                     <button id="salvar" class="button green">Salvar</button>
-                    <button id="cancelar" class="button blue">Criar Banco</button>
+                    <button id="cancelar" class="button blue">Cancelar</button>
                 </footer>
             </div>
         </div>
